--- a/index.html
+++ b/index.html
@@ -200,10 +200,9 @@
             </div>
           </div>
           <div class="span6 offset3 order">
-            <!-- Standard Bootstrap button. -->
-            <!-- http://twitter.github.io/bootstrap/base-css.html#buttons -->
-            <button class="btn btn-success btn-large">Preorder</button>
-          </div>
+
+			<a class="coinbase-button" data-code="f0b71a6cb56d0e0b40ad408ef34592d8" data-button-style="custom_large" href="https://coinbase.com/checkouts/f0b71a6cb56d0e0b40ad408ef34592d8">Pay With Bitcoin</a><script src="https://coinbase.com/assets/button.js" type="text/javascript"></script>
+	</div>
           <div class="span8 offset2 social">
 	  	<div class="addthis_toolbox addthis_default_style addthis_32x32_style">
 			<a class="addthis_button_preferred_1"></a>
